--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -1466,6 +1466,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Aha-Soft-People-User-group.ico" />
+    <None Include="Resources\supprimer1.png" />
+    <None Include="Resources\validation2.png" />
     <None Include="Resources\rechercher.png" />
     <None Include="Resources\supprimer.png" />
     <None Include="Resources\selection.png" />
