--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -278,6 +278,12 @@
     <Compile Include="Form\Episode\RadFEpisodeConsigneIdeDetail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeEnAttenteValidation.Designer.vb">
+      <DependentUpon>RadFEpisodeEnAttenteValidation.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Episode\RadFEpisodeEnAttenteValidation.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Episode\RadFEpisodeEnCoursListe.Designer.vb">
       <DependentUpon>RadFEpisodeEnCoursListe.vb</DependentUpon>
     </Compile>
@@ -1011,6 +1017,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Episode\RadFEpisodeConsigneIdeDetail.resx">
       <DependentUpon>RadFEpisodeConsigneIdeDetail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Episode\RadFEpisodeEnAttenteValidation.resx">
+      <DependentUpon>RadFEpisodeEnAttenteValidation.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Episode\RadFEpisodeEnCoursListe.resx">
       <DependentUpon>RadFEpisodeEnCoursListe.vb</DependentUpon>
