git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@300 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -304,7 +304,7 @@
     <Compile Include="Bean\Parcours\ParcoursClass.vb" />
     <Compile Include="Bean\Parcours\ParcoursConsigneClass.vb" />
     <Compile Include="Bean\Parcours\ParcoursHistoClass.vb" />
-    <Compile Include="Bean\Patient\PatientNoteClass.vb" />
+    <Compile Include="Bean\Patient\PatientNote.vb" />
     <Compile Include="Bean\PPS\PpsClass.vb" />
     <Compile Include="Bean\ROR\RorClass.vb" />
     <Compile Include="Bean\Parcours\SpecialiteClass.vb" />
@@ -988,7 +988,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>UniteSanitaireDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Bean\Patient\PatientClass.vb" />
+    <Compile Include="Bean\Patient\Patient.vb" />
     <Compile Include="Menu\FAuthentification.Designer.vb">
       <DependentUpon>FAuthentification.vb</DependentUpon>
     </Compile>
