--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -1484,6 +1484,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Aha-Soft-People-User-group.ico" />
+    <None Include="Resources\modifier2.png" />
+    <None Include="Resources\modifier1.png" />
+    <None Include="Resources\modifier.png" />
     <None Include="Resources\supprimer1.png" />
     <None Include="Resources\validation2.png" />
     <None Include="Resources\rechercher.png" />
