git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@306 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -41,6 +41,7 @@
     <add key="AgeAdulteFemme" value="15" />
     <add key="DelaiDefautReponseSousEpisode" value ="15"/>
     <add key="CheminTelechargement" value ="c:\oasis\telechargement"/>
+    <add key="IdUserAuto" value="1" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
