--- a/oasis/.editorconfig
+++ b/oasis/.editorconfig
@@ -2,3 +2,6 @@
 
 # BC40005: Le membre masque une méthode substituable dans le type de base
 dotnet_diagnostic.BC40005.severity = none
+
+# IDE0017: Simplifier l'initialisation des objets
+dotnet_style_object_initializer = true:none
