--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -504,12 +504,7 @@
     <Compile Include="Form\Theriaque\RadFMedicamentSelecteur.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\RendezVous\RadFPatientRendez-vousListe.Designer.vb">
-      <DependentUpon>RadFPatientRendez-vousListe.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Form\RendezVous\RadFPatientRendez-vousListe.vb">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Form\Patient\RadFPatientRendez-vousListe.vb" />
     <Compile Include="Form\SousEpisode\FrmSousEpisode.Designer.vb">
       <DependentUpon>FrmSousEpisode.vb</DependentUpon>
     </Compile>
@@ -618,16 +613,16 @@
     <Compile Include="Form\Workflow\RadFWkfDemandeAvis.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\RendezVous\RadFTacheModificationDemandeRendezVous.Designer.vb">
+    <Compile Include="Form\tache\RadFTacheModificationDemandeRendezVous.Designer.vb">
       <DependentUpon>RadFTacheModificationDemandeRendezVous.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\RendezVous\RadFTacheModificationDemandeRendezVous.vb">
+    <Compile Include="Form\tache\RadFTacheModificationDemandeRendezVous.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\RendezVous\RadFTacheModificationRendezVous.Designer.vb">
+    <Compile Include="Form\tache\RadFTacheModificationRendezVous.Designer.vb">
       <DependentUpon>RadFTacheModificationRendezVous.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\RendezVous\RadFTacheModificationRendezVous.vb">
+    <Compile Include="Form\tache\RadFTacheModificationRendezVous.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\utilisateur\FrmLogin.Designer.vb">
@@ -1093,8 +1088,9 @@
     <EmbeddedResource Include="Form\Theriaque\RadFMedicamentSelecteur.resx">
       <DependentUpon>RadFMedicamentSelecteur.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\RendezVous\RadFPatientRendez-vousListe.resx">
+    <EmbeddedResource Include="Form\Patient\RadFPatientRendez-vousListe.resx">
       <DependentUpon>RadFPatientRendez-vousListe.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\SousEpisode\FrmSousEpisode.resx">
       <DependentUpon>FrmSousEpisode.vb</DependentUpon>
@@ -1150,10 +1146,10 @@
     <EmbeddedResource Include="Form\Workflow\RadFWkfDemandeAvis.resx">
       <DependentUpon>RadFWkfDemandeAvis.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\RendezVous\RadFTacheModificationDemandeRendezVous.resx">
+    <EmbeddedResource Include="Form\tache\RadFTacheModificationDemandeRendezVous.resx">
       <DependentUpon>RadFTacheModificationDemandeRendezVous.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\RendezVous\RadFTacheModificationRendezVous.resx">
+    <EmbeddedResource Include="Form\tache\RadFTacheModificationRendezVous.resx">
       <DependentUpon>RadFTacheModificationRendezVous.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\utilisateur\FrmLogin.resx">
@@ -1504,6 +1500,7 @@
     <Folder Include="Bean\Utilisateur\" />
     <Folder Include="Dao\Utilisateur\" />
     <Folder Include="Form\Obsolete\" />
+    <Folder Include="Form\RendezVous\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Oasis_Common\Oasis_Common.vbproj">
