git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@325 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -1484,6 +1484,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Aha-Soft-People-User-group.ico" />
+    <None Include="Resources\historique.png" />
+    <None Include="Resources\select.png" />
     <None Include="Resources\modifier2.png" />
     <None Include="Resources\modifier1.png" />
     <None Include="Resources\modifier.png" />
