git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@326 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -564,6 +564,12 @@
     <Compile Include="Form\Traitement\RadFDeclarationAllergieEtCIDetail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\utilisateur\FrmUtilisateur.Designer.vb">
+      <DependentUpon>FrmUtilisateur.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\utilisateur\FrmUtilisateur.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Workflow\RadFWkfCommentaire.Designer.vb">
       <DependentUpon>RadFWkfCommentaire.vb</DependentUpon>
     </Compile>
@@ -1122,6 +1128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Traitement\RadFDeclarationAllergieEtCIDetail.resx">
       <DependentUpon>RadFDeclarationAllergieEtCIDetail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\utilisateur\FrmUtilisateur.resx">
+      <DependentUpon>FrmUtilisateur.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Workflow\RadFWkfCommentaire.resx">
       <DependentUpon>RadFWkfCommentaire.vb</DependentUpon>
