--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -233,6 +233,7 @@
     <Compile Include="Bean\SousEpisode\SousEpisodeSousType.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisode.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeType.vb" />
+    <Compile Include="Bean\structurebase\Siege.vb" />
     <Compile Include="Bean\Theriaque\Allergie.vb" />
     <Compile Include="Bean\Theriaque\ContreIndicationATC.vb" />
     <Compile Include="Bean\Theriaque\ContreIndicationSubstance.vb" />
@@ -256,6 +257,7 @@
     <Compile Include="Dao\SousEpisode\SousEpisodeSousSousTypeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeSousTypeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeTypeDao.vb" />
+    <Compile Include="Dao\structurebase\SiegeDao.vb" />
     <Compile Include="Dao\Theriaque\AllergieDao.vb" />
     <Compile Include="Dao\Theriaque\ContreIndicationATCDao.vb" />
     <Compile Include="Dao\Theriaque\ContreIndicationSubstanceDao.vb" />
