--- a/oasis/App.config
+++ b/oasis/App.config
@@ -42,6 +42,7 @@
     <add key="DelaiDefautReponseSousEpisode" value ="15"/>
     <add key="CheminTelechargement" value ="c:\oasis\telechargement"/>
     <add key="IdUserAuto" value="1" />
+    <add key="PeriodeNonDelivrance" value="15" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
