git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@340 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -27,6 +27,8 @@
     <!--< en années -->
     <add key="longueurStringAllergie" value="12" />
     <add key="drcIdConclusionIde" value="128001" />
+    <add key="drcIdStrategieContextuelleParDefaut" value="200003" />
+    <add key="drcIdMesurePreventiveParDefaut" value="300017" />
     <add key="organisation" value="Oasis" />
     <add key="dureeRendezVous" value="15" />
     <!--< en minutes -->
@@ -42,7 +44,7 @@
     <add key="DelaiDefautReponseSousEpisode" value ="15"/>
     <add key="CheminTelechargement" value ="c:\oasis\telechargement"/>
     <add key="IdUserAuto" value="1" />
-    <add key="PeriodeNonDelivrance" value="15" />
+    <add key="PeriodeNonDelivrance" value="15" />   
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
