--- a/oasis/App.config
+++ b/oasis/App.config
@@ -44,7 +44,8 @@
     <add key="DelaiDefautReponseSousEpisode" value ="15"/>
     <add key="CheminTelechargement" value ="c:\oasis\telechargement"/>
     <add key="IdUserAuto" value="1" />
-    <add key="PeriodeNonDelivrance" value="15" />   
+    <add key="PeriodeNonDelivrance" value="15" />
+    <add key="SpecialiteDelaiPriseEnCharge" value="3" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
