--- a/oasis/App.config
+++ b/oasis/App.config
@@ -46,6 +46,7 @@
     <add key="IdUserAuto" value="1" />
     <add key="PeriodeNonDelivrance" value="15" />
     <add key="SpecialiteDelaiPriseEnCharge" value="3" />
+    <add key="ContactAdministrateur" value ="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin@oasis.fr"/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
