git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@346 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -85,7 +85,7 @@
     <Compile Include="Dao\Utilisateur\FonctionDao.vb" />
     <Compile Include="Dao\Utilisateur\ProfilDao.vb" />
     <Compile Include="Dao\Utilisateur\UserDao.vb" />
-    <Compile Include="Dao\Utilisateur\UtilisateurDao.vb" />
+    <Compile Include="Dao\Obsolete\UtilisateurDao.vb" />
     <Compile Include="Module\ModuleUtils.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
