git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@347 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -476,6 +476,12 @@
     <Compile Include="Form\LigneDeVie\RadFLigneDeVieParametreSelecteur.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\RendezVous\RadFHistoriqueRDVPatient.Designer.vb">
+      <DependentUpon>RadFHistoriqueRDVPatient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\RendezVous\RadFHistoriqueRDVPatient.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\RendezVous\RadFPatientRendezVousListe.Designer.vb">
       <DependentUpon>RadFPatientRendezVousListe.vb</DependentUpon>
     </Compile>
@@ -1092,6 +1098,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\LigneDeVie\RadFLigneDeVieParametreSelecteur.resx">
       <DependentUpon>RadFLigneDeVieParametreSelecteur.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\RendezVous\RadFHistoriqueRDVPatient.resx">
+      <DependentUpon>RadFHistoriqueRDVPatient.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\RendezVous\RadFPatientRendezVousListe.resx">
       <DependentUpon>RadFPatientRendezVousListe.vb</DependentUpon>
