git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@355 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -891,9 +891,7 @@
     <Compile Include="Dao\Traitement\TraitementDao.vb" />
     <Compile Include="Pdf\PdfOrdonnance.vb" />
     <Compile Include="Pdf\PdfSynthese.vb" />
-    <Compile Include="Pdf\PrintOrdonnance.vb">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Pdf\PrintOrdonnance.vb" />
     <Compile Include="Resources\FrenchRichTextBoxStrings.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
