git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@359 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -898,6 +898,7 @@
     <Compile Include="Pdf\PdfOrdonnance.vb" />
     <Compile Include="Pdf\PdfSynthese.vb" />
     <Compile Include="Pdf\PrintOrdonnance.vb" />
+    <Compile Include="Pdf\PrtOrdonnance.vb" />
     <Compile Include="Resources\FrenchRichTextBoxStrings.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -1525,7 +1526,6 @@
     <None Include="Resources\validation2.png" />
     <None Include="Resources\rechercher.png" />
     <None Include="Resources\supprimer.png" />
-    <None Include="Resources\selection.png" />
     <None Include="Resources\validation.png" />
     <None Include="Resources\mail.png" />
     <None Include="Resources\print.png" />
