--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -906,6 +906,7 @@
     <Compile Include="Dao\Traitement\TraitementDao.vb" />
     <Compile Include="Pdf\PdfSynthese.vb" />
     <Compile Include="Pdf\PrtOrdonnance.vb" />
+    <Compile Include="Pdf\PrtSynthese.vb" />
     <Compile Include="Resources\FrenchRichTextBoxStrings.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
