git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@372 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -44,9 +44,11 @@
     <add key="DelaiDefautReponseSousEpisode" value ="15"/>
     <add key="CheminTelechargement" value ="c:\oasis\telechargement"/>
     <add key="IdUserAuto" value="1" />
+    <add key="FonctionEmetteurAutoId" value="14" />
+    <add key="DureeRendezVousParDefaut" value="15" />
     <add key="PeriodeNonDelivrance" value="15" />
     <add key="SpecialiteDelaiPriseEnCharge" value="90" />
-    <add key="ContactAdministrateur" value ="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin@oasis.fr"/>
+    <add key="ContactAdministrateur" value ="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin.contact@oasis.fr"/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
