git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@394 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -210,6 +210,7 @@
     <Compile Include="Bean\SousEpisode\SousEpisode.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeType.vb" />
     <Compile Include="Bean\structurebase\Siege.vb" />
+    <Compile Include="Bean\Tache\TacheEmetteurEtDestinataire.vb" />
     <Compile Include="Bean\Theriaque\Allergie.vb" />
     <Compile Include="Bean\Theriaque\ContreIndicationATC.vb" />
     <Compile Include="Bean\Theriaque\ContreIndicationSubstance.vb" />
