--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -459,6 +459,12 @@
     <Compile Include="Form\RendezVous\RadFHistoriqueRDVPatient.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\RendezVous\RadFListeRendezVousEnCours.Designer.vb">
+      <DependentUpon>RadFListeRendezVousEnCours.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\RendezVous\RadFListeRendezVousEnCours.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\RendezVous\RadFPatientRendezVousListe.Designer.vb">
       <DependentUpon>RadFPatientRendezVousListe.vb</DependentUpon>
     </Compile>
@@ -1085,6 +1091,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\RendezVous\RadFHistoriqueRDVPatient.resx">
       <DependentUpon>RadFHistoriqueRDVPatient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\RendezVous\RadFListeRendezVousEnCours.resx">
+      <DependentUpon>RadFListeRendezVousEnCours.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\RendezVous\RadFPatientRendezVousListe.resx">
       <DependentUpon>RadFPatientRendezVousListe.vb</DependentUpon>
